# moex-iss-client

./: .env.example  .gitignore  PROJECT_MAP.md  PROJECT_STATE.md  README.md  SUPERSET.md  USAGE.md  docker-compose.yml  pyproject.toml  requirements.txt
airflow/: Dockerfile
clickhouse_data/: status  uuid
clickhouse_data/metadata/: default.sql  moex  moex.sql  system  system.sql
clickhouse_data/preprocessed_configs/: config.xml
clickhouse_data/store/04d/04d63d10-f46b-4129-a59d-79b35f7c9c41/202509_1_8_2/: checksums.txt  data.cmrk4  primary.cidx  ttl.txt
clickhouse_data/store/2b0/2b045131-ac52-4d7f-9fcf-74c6db8400e2/202509_1_476_95/: checksums.txt  data.cmrk4  primary.cidx
clickhouse_data/store/94c/94c5cbc2-8287-42bb-bd92-f3072841f9b0/: securities_history.sql
clickhouse_data/store/ac0/ac0000ea-c444-4fee-839b-ffa041d6ee11/: asynchronous_metric_log.sql  error_log.sql  metric_log.sql  processors_profile_log.sql  query_log.sql  text_log.sql  trace_log.sql
dags/: moex_daily_load_dag.py  moex_day_session_load_dag.py  moex_day_session_v2.py  moex_tqbr_summary_dag.py
grafana/provisioning/datasources/: clickhouse.yml
postgres-data/: postmaster.pid
postgres-data/base/13532/: pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16411  16413  16413_vm  16420  16422  16423  16424  16425  16427  16434  16436  16438  16440  16447  16449  16450  16451  16452  16454  16461  16463  16469  16482  16489  16491  16492  16493  16495  16499  16501  16503  16505  16509  16511  16513  16515  16519  (+86 more)
postgres-data/global/: pg_control  pg_internal.init
postgres-data/pg_stat_tmp/: db_0.stat  db_16384.stat  global.stat
postgres-data/pg_xact/: 0000
scripts/: daily_load.py  day_session_load.py  load_history_to_clickhouse.py  session_summary_load.py  setup_dev.sh  today_load.py
src/moex_client/: clickhouse.py
src/moex_client/auth/: __init__.py  api.py
src/moex_client/cli/: main.py
src/moex_client/client/: __init__.py  api.py  session_api.py  today_api.py
src/moex_client/config/: settings.py
superset/: Dockerfile
(+431 files in other folders)
